replace URL with URI due to slow performance of equals/hashCode