@@ -1,6 +1,7 @@
 package de.briemla.fxmltemplateloader.value;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import de.briemla.fxmltemplateloader.template.TemplateRegistry;
@@ -9,10 +10,10 @@ import javafx.fxml.LoadException;
 public class LocationValue implements IValue {
 
     private final ClassLoader classLoader;
-    private final URL location;
+    private final URI location;
     private final String value;
 
-    public LocationValue(ClassLoader classLoader, URL location, String value) {
+    public LocationValue(ClassLoader classLoader, URI location, String value) {
         super();
         if (classLoader == null) {
             throw new NullPointerException("ClassLoader is not allowed to be null");
@@ -38,7 +39,7 @@ public class LocationValue implements IValue {
             return resource.toString();
         }
         try {
-            return new URL(location, value).toString();
+            return new URL(location.toURL(), value).toString();
         } catch (MalformedURLException exception) {
             System.err.println(location + "/" + value);
         }
@@ -57,28 +58,37 @@ public class LocationValue implements IValue {
 
     @Override
     public boolean equals(Object obj) {
-        if (this == obj)
+        if (this == obj) {
             return true;
-        if (obj == null)
+        }
+        if (obj == null) {
             return false;
-        if (getClass() != obj.getClass())
+        }
+        if (getClass() != obj.getClass()) {
             return false;
+        }
         LocationValue other = (LocationValue) obj;
         if (classLoader == null) {
-            if (other.classLoader != null)
+            if (other.classLoader != null) {
                 return false;
-        } else if (!classLoader.equals(other.classLoader))
+            }
+        } else if (!classLoader.equals(other.classLoader)) {
             return false;
+        }
         if (location == null) {
-            if (other.location != null)
+            if (other.location != null) {
                 return false;
-        } else if (!location.equals(other.location))
+            }
+        } else if (!location.equals(other.location)) {
             return false;
+        }
         if (value == null) {
-            if (other.value != null)
+            if (other.value != null) {
                 return false;
-        } else if (!value.equals(other.value))
+            }
+        } else if (!value.equals(other.value)) {
             return false;
+        }
         return true;
     }
 
